# stavalfi_cpp_ex3

./: .gitignore  CMakeLists.txt  main.cpp
include/: Allocator.h  AllocatorStrategy.h  AllocatorStrategyFactory.h  ConfigurationFile.h  ConfigurationReader.h  ConfigurationTypes.h  ConfigurationWriter.h  FirstFitAllocatorStrategy.h  HashMapAllocator.h  MemoryManager.h  MemoryPool.h  Node.h  Pool.h  Set.h
src/: Allocator.cpp  AllocatorStrategy.cpp  AllocatorStrategyFactory.cpp  ConfigurationFile.cpp  ConfigurationReader.cpp  ConfigurationTypes.cpp  ConfigurationWriter.cpp  FirstFitAllocatorStrategy.cpp  HashMapAllocator.cpp  MemoryManager.cpp  MemoryPool.cpp  Pool.cpp
